[package]
name = "dbebble"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.35"
quick-xml = "0.31.0"
reqwest = { version = "0.11.26", features= ["json"]}
tokio = { version = "1.36.0", features = ["full"]}
